--- a/rinconcito-api/package.json
+++ b/rinconcito-api/package.json
@@ -6,10 +6,9 @@
   "engines": {
     "node": "10.11.0"
   },
+  "type": "module",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test:run-server": "TEST_DATABASE=mytestdatabase npm start",
-    "test:execute-test": "mocha --require @babel/register 'src/**/*.spec.js'",
     "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [],
