--- a/fe-server/package.json
+++ b/fe-server/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "rinconcito-api",
+  "name": "fe-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.9.5",
-    "express": "^4.18.2",
-    "graphql": "^16.8.1",
-    "mongoose": "^8.0.3"
+    "express": "^4.18.2"
   }
 }
