--- a/rinconcito-api/package.json
+++ b/rinconcito-api/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0"
   }
 }
